$Id$
===============================================================

223	Luke Howard <lukeh@padl.com>

	* do loop detection in nested groups

222	Luke Howard <lukeh@padl.com>

	* fix deadlock in _nss_ldap_getentry()
	* support more AIX usersec attributes
	* more AIX porting fixes
	* support Heimdal as well as MIT Kerberos

221	Luke Howard <lukeh@padl.com>

	* AIX fix from <carlos.celso@embraer.com.br>
	  Recall #169033
	* support for expansion of nested RFC2307bis groups
	* support for searching using range retrieval
	* fix memory leak with private contexts
	* fix memory leak in do_result()
	* implement _nss_ldap_getentry for AIX enumeration
	* implement netgroups for IRS/AIX
	* remove dependency on Berkeley DB - schema mapping
	  and RFC2307bis no longer requires DB
	* remove old NeXT cruft in resolve.c

220	Luke Howard <lukeh@padl.com>

	* fix for BUG#169: getntohost() on Solaris
	* fix for BUG#170: _nss_ldap_getgroupsbymember_r fails
	  to return all groups when NSCD is running and
	  attribute mapping is enabled on Solaris
	* fix for BUG#173: reinstate use of sigaction()
	  (XXX what is the correct fix here?)
	* fix for BUG#174: innetgr() depth checking

218	Luke Howard <lukeh@padl.com>

	* fix for BUG#168: set errnop to ENOENT if not found
	* check for -lgssapi before -lgssapi_krb5

217	Luke Howard <lukeh@padl.com>
	
	* fix for BUG#167: compilation fails on Solaris

216	Luke Howard <lukeh@padl.com>

	* patch from Thorsten Kukuk to avoid overwriting
	  sockaddr storage for IPv6; use struct
	  sockaddr_storage if available
	* fix for BUG#153: use asynchronous search API
	  in initgroups()
	* fix for BUG#157: check for __pthread_once rather
	  than __pthread_atfork on glibc, as the latter is
	  no longer exported
	* fix for BUG#158: escape netgroup search filters
	  correctly
	* fix for BUG#161: remove redundant lock in
	  _nss_ldap_innetgr()
	* fix for BUG#164: set schema element array size
	  to LM_NONE + 1 not LM_NONE