@@ -47,6 +47,7 @@ Luke Howard retains copyright in all contributed code.
 	Greg Retowski <greg@rage.net>
 	Alain Richard <alain.richard@equation.fr>
 	Michael Shuey <shuey@ecn.purdue.edu>
+	Oliver Schulze L. <oliver@samera.com.py>
 	Scott M. Stone <sstone@foo3.com>
 	Gero Treuner <gero@faveve.uni-stuttgart.de>
 	Jarkko Turkulainen <jt@wapit.com>
