@@ -115,7 +115,7 @@ base dc=padl,dc=com
 # longer supported.
 #
 # If you are using XAD, you can set pam_password
-# to nds, ad, or exop. Make sure that you have
+# to racf, ad, or exop. Make sure that you have
 # SSL enabled.
 
 # Do not hash the password at all; presume
@@ -134,6 +134,10 @@ base dc=padl,dc=com
 # cleartext. Necessary for use with Novell
 # Directory Services (NDS)
 #pam_password nds
+
+# RACF is an alias for the above. For use with
+# IBM RACF
+#pam_password racf
 
 # Update Active Directory password, by
 # creating Unicode password and updating
