@@ -3,6 +3,7 @@ $Id$
 
 223	Luke Howard <lukeh@padl.com>
 
+	* allow empty lines in /etc/ldap.conf
 	* do loop detection in nested groups
 
 222	Luke Howard <lukeh@padl.com>
